--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   testdb5:
+    platform: linux/amd64
     image: 'mysql:5'
     command: --init-file /srv/sql/init.sql
     volumes:
