--- a/toolbox/Makefile
+++ b/toolbox/Makefile
@@ -1,7 +1,7 @@
 up:
 	sudo docker-compose up -d --build --force-recreate
 build:
-	sudo docker-compose build
+	sudo docker-compose build --no-cache
 
 start:
 	sudo docker-compose start
