--- a/dockerfile/Dockerfile.ubuntu.network
+++ b/dockerfile/Dockerfile.ubuntu.network
@@ -18,4 +18,5 @@ RUN apt-get update && \
 	apt-get install -y curl && \
 	apt-get install -y gcc g++ make
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --reinstall ca-certificates nmap
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --reinstall ca-certificates nmap 
+RUN apt-get install -y iproute2 iputils-ping telnet
