--- a/dockerfile/Dockerfile.alpine.toolbox
+++ b/dockerfile/Dockerfile.alpine.toolbox
@@ -1,3 +1,27 @@
+FROM  airdb/alpine
+MAINTAINER  Dean <Dean@airdb.com>
+
+# Build image: 
+# docker build . --rm -t airdb/alpine-nginx -f  nginx.dockerfile
+# Run Container:
+# docker run -d --name access airdb/alpine-toolbox
+
+# Step 1: List service infomation and choose stable version.
+ENV SERVICE toolbox
+ENV VERSION 1.12.2
+
+RUN apk add --no-cache --virtual .build-deps \
+    bash \
+    mysql-client \
+    nmap \
+    redis \
+    vim \
+    fping \
+    openssh-server \
+    openssh \
+    git \
+    subversion
+
 FROM ubuntu:20.04
 MAINTAINER info@airdb.com
 
@@ -33,8 +57,6 @@ RUN apk add --update --no-cache --virtual .build-deps \
 RUN echo "export RUNNING_CONTEXT=docker" >> /etc/profile
 RUN echo "export PS1='[\H \W]\\$ '" >> /etc/profile
 RUN echo "export PATH='$PATH:$HOME/go/bin'" >> /etc/profile
-RUN echo "export GO111MODULE=on" >> /etc/profile
 RUN echo 'export HISTTIMEFORMAT="%Y-%m-%d %T \$LC_NAME \$SSH_TTY " ' >> /etc/profile
 
-EXPOSE 22
-CMD /bin/bash
+CMD ["/bin/sh", "/etc/profile"]
