--- a/dockerfile/Dockerfile.ubuntu.network
+++ b/dockerfile/Dockerfile.ubuntu.network
@@ -15,7 +15,7 @@ RUN echo "export VISIBLE=now" >> /etc/profile
 
 WORKDIR /srv
 RUN apt-get update && \
-	apt-get install -y curl && \
+	apt-get install -y curl net-tools && \
 	apt-get install -y gcc g++ make
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --reinstall ca-certificates nmap 
