--- a/dockerfile/Dockerfile.ubuntu.nodejs
+++ b/dockerfile/Dockerfile.ubuntu.nodejs
@@ -1,5 +1,8 @@
-FROM ubuntu:16.04
-MAINTAINER  dean
+FROM node
+MAINTAINER https://github.com/airdb
+
+ENV DEBIAN_FRONTEND noninteractive
+WORKDIR /srv
 
 ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
@@ -9,11 +12,7 @@ ENV echo "export RUNNING_CONTEXT=docker" >> /etc/profile
 
 RUN echo "export PS1='[\H \W]\\$ '" >> /root/.profile
 
-ENV DEBIAN_FRONTEND noninteractive
-RUN apt-get update && apt-get install -y curl && \
-	apt-get install -y gcc g++ make && \
-	curl -sL https://deb.nodesource.com/setup_8.x | bash - && \
-	apt-get install -y nodejs && \
-	npm install -g @d2-admin/d2-admin-cli
-
-WORKDIR /srv
+# curl -sL https://deb.nodesource.com/setup_8.x | bash - && \
+# npm install -g @d2-admin/d2-admin-cli
+RUN apt-get update && \
+	apt-get install -y curl git vim
