--- a/dockerfile/Dockerfile.ubuntu.base
+++ b/dockerfile/Dockerfile.ubuntu.base
@@ -1,6 +1,6 @@
 FROM ubuntu:16.04
 
-MAINTAINER airdb.com
+MAINTAINER https://github.com/airdb
 
 ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
@@ -10,5 +10,14 @@ ENV echo "export RUNNING_CONTEXT=docker" >> /etc/profile
 
 RUN echo "export PS1='[\H \W]\\$ '" >> /root/.profile
 
-RUN apt-get install -y curl && \
+
+WORKDIR /srv
+
+ENV DEBIAN_FRONTEND noninteractive
+
+RUN apt-get update && \
+	apt-get install -y curl git less && \
 	apt-get install -y gcc g++ make
+
+
+RUN apt-get install -y --reinstall ca-certificates nmap
