--- a/dockerfile/Dockerfile.ubuntu.common
+++ b/dockerfile/Dockerfile.ubuntu.common
@@ -1,4 +1,7 @@
-FROM ubuntu:16.04
+# The base dockerfile is common middle layer for docker image.
+# OS Version depends on the Dockerfile which include this common file.
+#
+#FROM ubuntu:20.04
 
 MAINTAINER https://github.com/airdb
 
@@ -16,8 +19,10 @@ WORKDIR /srv
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update && \
-	apt-get install -y curl git less && \
+	apt-get install -y curl git less vim && \
 	apt-get install -y gcc g++ make
 
 
-RUN apt-get install -y --reinstall ca-certificates nmap
+## Install network releated deb package.
+RUN apt-get install -y --reinstall ca-certificates && \
+	apt-get install -y net-tools iproute2 iputils-ping telnet nmap
