--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,7 +39,7 @@ http {
         root /srv;
     
         location / {
-    		proxy_pass https://entrytask.test.shopee.io/dean/af/check_tls_fp;
+    		proxy_pass https://airdb.dev/dean/af/check_tls_fp;
         }
     
     }
