--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -3,10 +3,11 @@ version: '2.0'
 
 services:
   nginx:
+    platform: linux/amd64
     build:
       context: .
       dockerfile: Dockerfile
-    image: 'nginx:latest'
+    image: 'airdb/nginx:latest'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     environment:
