--- a/python/docker-compose.yml
+++ b/python/docker-compose.yml
@@ -14,6 +14,6 @@ services:
       - "8080:8080"
     environment:
       - env=test
-      - BROWSERSTACK_USERNAME=l8pVcAzQzJwX5fKXkXQSx
-      - BROWSERSTACK_ACCESS_KEY=8pVcAzQzJwX5fKXkXQSx
+      - BROWSERSTACK_USERNAME=${BROWSERSTACK_USERNAME}
+      - BROWSERSTACK_ACCESS_KEY=${BROWSERSTACK_ACCESS_KEY}
     container_name: airdb-python
