--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,8 +39,14 @@ http {
         root /srv;
     
         location / {
-    		proxy_pass https://airdb.dev/dean/af/check_tls_fp;
+    		# proxy_pass https://airdb.dev/hello/af/check_tls_fp;
+    		#proxy_pass https://bbhj.airdb.io/hello?md5=$remote_addr$args;
+    		proxy_pass http://127.0.0.1/hello?md5=$remote_addr$args;
         }
+
+	location /hello {
+		return 200 "hello";
+	}
     
     }
 }
