--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,12 +40,27 @@ http {
     
         location / {
     		# proxy_pass https://airdb.dev/hello/af/check_tls_fp;
-    		#proxy_pass https://bbhj.airdb.io/hello?md5=$remote_addr$args;
-    		proxy_pass http://127.0.0.1/hello?md5=$remote_addr$args;
+    		# proxy_pass https://bbhj.airdb.io/hello?md5=$remote_addr$args;
+    		# proxy_pass http://127.0.0.1/hello?md5=$remote_addr$args;
+
+		set $delimeter "";
+		
+		if ($is_args) {
+		  set $delimeter "&";
+		}
+  		set $args "$args${delimeter}apiKey=tiger";
+    		# proxy_pass http://127.0.0.1/args$is_args$args;
+    		proxy_pass http://127.0.0.1/args;
         }
 
 	location /hello {
+		add_header Content-Type text/plain;
 		return 200 "hello";
+	}
+
+	location /args{
+		add_header Content-Type text/plain;
+		return 200 "args: $args";
 	}
     
     }
