--- a/toolbox/Makefile
+++ b/toolbox/Makefile
@@ -6,8 +6,7 @@ all: help
 help: ## Show help messages
 	@echo "Container - ${SERVICE} "
 	@echo
-	@echo "Usage:"
-	@echo "  make [target]"
+	@echo "Usage:\tmake COMMAND"
 	@echo
 	@echo "Commands:"
 	@sed -n '/##/s/\(.*\):.*##/  \1#/p' ${MAKEFILE_LIST} | grep -v "MAKEFILE_LIST" | column -t -c 2 -s '#'
