update docker compose

--- a/fpm/Makefile
+++ b/fpm/Makefile
@@ -1,19 +1,19 @@
 up:
-	sudo docker-compose up -d --build --force-recreate
+	docker compose up -d --build --force-recreate
 build:
-	sudo docker-compose build --no-cache
+	docker compose build --no-cache
 
 start:
-	sudo docker-compose start
+	docker compose start
 
 stop:
-	sudo docker-compose stop
+	docker compose stop
 
 restart:
-	sudo docker-compose restart
+	docker compose restart
 
 ps:
-	sudo docker-compose ps
+	docker compose ps
 
 bash:
-	sudo docker-compose exec toolbox bash
+	docker compose exec toolbox bash
