--- a/toolbox/Makefile
+++ b/toolbox/Makefile
@@ -12,27 +12,27 @@ help: ## Show help messages
 	@sed -n '/##/s/\(.*\):.*##/  \1#/p' ${MAKEFILE_LIST} | grep -v "MAKEFILE_LIST" | column -t -c 2 -s '#'
 
 up: ## Create and start containers
-	sudo docker-compose up -d --build --force-recreate
+	docker compose up -d --build --force-recreate
 build: ## Build or rebuild services
-	sudo docker-compose build --no-cache
+	docker compose build --no-cache
 
 start: ## Start services
-	sudo docker-compose start
+	docker compose start
 
 stop: ## Stop services
-	sudo docker-compose stop
+	docker compose stop
 
 restart: ## Restart containers
-	sudo docker-compose restart
+	docker compose restart
 
 ps: ## List containers
-	sudo docker-compose ps
+	docker compose ps
 
 log logs: ## View output from containers
-	sudo docker-compose logs
+	docker compose logs
 
 rm: stop ## Stop and remove stopped service containers
-	sudo docker-compose rm ${SERVICE}
+	docker compose rm ${SERVICE}
 
 bash: ## Execute a command in a running container
-	sudo docker-compose exec ${SERVICE} bash
+	docker compose exec ${SERVICE} bash
