--- a/builder/alpine-go1.20/docker-compose.yaml
+++ b/builder/alpine-go1.20/docker-compose.yaml
@@ -2,14 +2,10 @@ version: '3.3'
 services:
   builder:
     container_name: builder
-    image: 'airdb/builder:latest'
+    image: 'airdb/builder:alpine-go1.20'
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "9000:9000/tcp"
     command: sleep 3600
-    volumes:
-      - ./:/srv/toolbox
     environment:
       - env=test
