--- a/toolbox/docker-compose.yml
+++ b/toolbox/docker-compose.yml
@@ -2,11 +2,9 @@ version: '3'
 
 services:
   toolbox:
-    #platform: linux/amd64
     build:
       context: ../
-      # dockerfile: ./dockerfile/Dockerfile.alpine.toolbox
-      dockerfile: ./dockerfile/Dockerfile.ubuntu.base
+      dockerfile: Dockerfile.ubuntu
     image: 'airdb/toolbox:latest'
     command: sleep 3600
     volumes:
