--- a/builder/alpine-go/Dockerfile
+++ b/builder/alpine-go/Dockerfile
@@ -1,9 +1,9 @@
-FROM golang:1.20-alpine
+FROM golang:1.21-alpine
 
-LABEL description="airdb build" \
-      tags="latest v0.1.0" \
+LABEL description="airdb builder" \
+      tags="latest v0.2.0" \
       maintainer="airdb.team <https://github.com/airdb/docker>" \
-      build_ver="2023-0428_0028"
+      build_ver="2023-0928_0000"
  
 RUN apk add --no-cache --virtual .build-deps \
     bash \
