--- a/db/mysql/docker-compose.yml
+++ b/db/mysql/docker-compose.yml
@@ -1,6 +1,8 @@
-version: '3'
+version: '3.8'
+
 services:
   testdb5:
+    container_name: testdb5
     platform: linux/amd64
     image: 'mysql:5'
     command: --init-file /srv/sql/init.sql
@@ -10,9 +12,9 @@ services:
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=test
-      - MYSQL_USER=airdb
-      - MYSQL_PASSWORD=airdb
-      - MYSQL_ROOT_HOST=%
-    container_name: testdb5
+      TZ: Asia/Shanghai
+      MYSQL_ROOT_HOST: '%'
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: test
+      MYSQL_USER: airdb
+      MYSQL_PASSWORD: airdb
