--- a/os/ubuntu/Makefile
+++ b/os/ubuntu/Makefile
@@ -1,4 +1,5 @@
-# LABEL Maintainer="dean"  Description="https://github.com/deancn"
+# LABEL Maintainer="airdb team <info@airdb.com>"  Description="https://github.com/airdb"
+
 SERVICE := toolbox
 
 all: help
