--- a/os/ubuntu/docker-compose.yml
+++ b/os/ubuntu/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   toolbox:
     container_name: ubuntu
+    platform: linux/amd64
     working_dir: /srv/
     build:
       context: .
