--- a/os/alpine/docker-compose.yml
+++ b/os/alpine/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   alpine:
     container_name: alpine
-    platform: linux/amd64
+      #platform: linux/amd64
     working_dir: /srv/
     build:
       context: .
