--- a/bbhj-bbs/Dockerfile
+++ b/bbhj-bbs/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:bionic
 
-LABEL Maintainer="oldhu <me@oldhu.com>" \
-      Description="Discuz! X container with Nginx & PHP-FPM based on Ubuntu bionic."
+LABEL maintainer="airdb team <info@airdb.com>"
+LABEL description="Discuz! X container with Nginx & PHP-FPM based on Ubuntu bionic."
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG TZ=Asia/Shanghai
@@ -20,16 +20,16 @@ COPY root /
 ADD "https://www.discuz.net/daily/?dl=DZX-SC_UTF8-v3.4-202006050500-931ea4f2.zip" /tmp/DiscuzX/DiscuzX.zip
 
 RUN cd /tmp/DiscuzX/ && \
-	unzip DiscuzX.zip  && \
-	rm -rf upload/instal && \
-	mv upload /var/www/discuz
+    unzip DiscuzX.zip  && \
+    rm -rf upload/instal && \
+    mv upload /var/www/discuz
 
 #RUN cd /tmp && \
 #	wget https://gitee.com/ComsenzDiscuz/DiscuzX/repository/archive/v3.4-20191201?format=tar.gz -O /tmp/DiscuzX.tar.gz && \
 #	tar xvf /tmp/DiscuzX.tar.gz  && \
 #	rm -rf /tmp/DiscuzX/upload/install && \
 #	mv /tmp/DiscuzX/upload /var/www/discuz
-	
+
 RUN chown -R www-data:www-data /var/www/discuz
 
 EXPOSE 80 443
