--- a/builder/alpine-go/Dockerfile
+++ b/builder/alpine-go/Dockerfile
@@ -1,12 +1,13 @@
 FROM golang:1.21-alpine
 
-LABEL description="airdb builder" \
-      tags="latest v0.2.0" \
-      maintainer="airdb.team <https://github.com/airdb/docker>" \
-      build_ver="2023-0928_0000"
- 
+LABEL maintainer="airdb team <info@airdb.com>"
+LABEL description="https://github.com/airdb"
+
+LABEL tags="latest v0.2.0"
+LABEL buildtime ="2023-0928_0000"
+
 RUN apk add --no-cache --virtual .build-deps \
-    bash \
-    git \
-    vim \
-    tzdata
+      bash \
+      git \
+      vim \
+      tzdata
