--- a/builder/debian-go1.18/Dockerfile
+++ b/builder/debian-go1.18/Dockerfile
@@ -1,10 +1,8 @@
 FROM golang:1.18
 
-LABEL description="airdb build" \
-      tags="latest v0.1.0" \
-      maintainer="Dean <https://github.com/airdb/docker>" \
-      build_ver="2023-0405_1711"
- 
+LABEL maintainer="airdb team <info@airdb.com>"
+LABEL description="https://github.com/airdb"
+
 RUN cp /usr/share/zoneinfo/Asia/Singapore /etc/localtime
 
 WORKDIR /srv
