--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,5 +1,8 @@
 FROM airdb/alpine:latest as builder
 
+LABEL maintainer="airdb team <info@airdb.com>"
+LABEL description="https://github.com/airdb"
+
 WORKDIR /app
 
 CMD ["/bin/bash", "--login"]
