--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get install -y vim git curl
 #  apt-get install -y vim git nginx php7-fpm php-fpm
 
 WORKDIR /srv/
-ADD . /srv
+COPY . /srv
 RUN chown www-data.www-data -R /srv
 
 
