--- a/os/ubuntu/Dockerfile
+++ b/os/ubuntu/Dockerfile
@@ -4,9 +4,9 @@ LABEL maintainer="airdb team <info@airdb.com>"
 LABEL description="https://github.com/airdb"
 
 ENV NOTVISIBLE "in users profile"
-RUN echo "export VISIBLE=now" >> /etc/profile
-RUN echo "export DEBIAN_FRONTEND=noninteractive" >> /etc/profile
-RUN echo 'set encoding=utf-8' >  ~/.vimrc && \
+RUN echo "export VISIBLE=now" >> /etc/profile && \
+    echo "export DEBIAN_FRONTEND=noninteractive" >> /etc/profile && \
+    echo 'set encoding=utf-8' >  ~/.vimrc && \
     echo 'bind "^W" ed-delete-prev-word' > ~/.editrc
 
 RUN echo "export PS1='[\H \W]\\$ '" >> /root/.profile
