--- a/lnmp/Makefile
+++ b/lnmp/Makefile
@@ -1,19 +1,40 @@
-up:
-	docker compose up -d --build --force-recreate
-build:
-	docker compose build
+# LABEL Maintainer="airdb team <info@airdb.com>"  Description="https://github.com/airdb"
 
-start:
+SERVICE := lnmp
+
+all: help
+
+help: ## Show help messages
+	@echo "Container - ${SERVICE}"
+	@echo
+	@echo "Usage:\tmake COMMAND"
+	@echo
+	@echo "Commands:"
+	@sed -n '/##/s/\(.*\):.*##/  \1#/p' ${MAKEFILE_LIST} | grep -v "MAKEFILE_LIST" | column -t -c 2 -s '#'
+
+up: ## Create and start containers
+	docker compose up -d --force-recreate
+
+build: ## Build or rebuild services
+	docker compose build --no-cache
+
+start: ## Start services
 	docker compose start
 
-stop:
+stop: ## Stop services
 	docker compose stop
 
-restart:
+restart: ## Restart containers
 	docker compose restart
 
-ps:
+ps: ## List containers
 	docker compose ps
 
-bash:
-	docker compose exec lnmp bash
+log logs: ## View output from containers
+	docker compose logs
+
+rm: stop ## Stop and remove stopped service containers
+	docker compose rm ${SERVICE}
+
+bash: ## Execute a command in a running container
+	docker compose exec ${SERVICE} bash --login
