--- a/dockerfile/Dockerfile.ubuntu.python
+++ b/dockerfile/Dockerfile.ubuntu.python
@@ -10,9 +10,9 @@ FROM python:3
 ## It depends on docker-compose.yaml in this repo.
 INCLUDE+ ./dockerfile/Dockerfile.ubuntu.common
 
-#	apt-get install -y gcc g++ make
+#	apt install -y gcc g++ make
 #
-#RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --reinstall ca-certificates nmap
+#RUN DEBIAN_FRONTEND=noninteractive apt install -y --reinstall ca-certificates nmap
 
 RUN git clone  https://github.com/airdb/behave-browserstack /srv/behave-browserstack
 
