--- a/dockerfile/Dockerfile.ubuntu.qcloud
+++ b/dockerfile/Dockerfile.ubuntu.qcloud
@@ -10,7 +10,7 @@ ENV echo "export RUNNING_CONTEXT=docker" >> /etc/profile
 
 RUN echo "export PS1='[\H \W]\\$ '" >> /root/.profile
 
-RUN apt-get update && \
+RUN apt update && \
 	apt install -y curl vim python3-pip
 
 RUN pip3 install coscmd
