--- a/lnmp/Dockerfile
+++ b/lnmp/Dockerfile
@@ -3,19 +3,20 @@ FROM ubuntu:22.04
 ARG DEBIAN_FRONTEND=noninteractive
 
 #RUN sed -i 's/ports.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list && \
-RUN apt-get update && \
-    apt-get install --no-install-recommends -y \
+RUN apt update && \
+    apt install --no-install-recommends -y \
     vim git curl \
     supervisor \
     nginx \
+    netcat \
     mysql-client \
-    php php-mysqli php-fpm && \
+    php8.1 php8.1-mysqli php8.1-fpm && \
     rm -rf /var/cache/apt/archives /var/lib/apt/lists/*
 
 # php-pdo_mysql
 
 COPY . /srv
-RUN chown www-data.www-data -R /srv
+#RUN chown www-data.www-data -R /srv
 
 
 #CMD sleep 3600
