--- a/lnmp/docker-compose.yaml
+++ b/lnmp/docker-compose.yaml
@@ -14,6 +14,9 @@ services:
     volumes:
       - ./:/srv/lnmp
       - ./supervisord.conf:/etc/supervisor/conf.d/supervisord.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./www-fpm.conf:/etc/php/8.1/fpm/pool.d/www.conf
+
     ports:
       - "8080:8080"
     environment:
