--- a/lnmp/nginx.conf
+++ b/lnmp/nginx.conf
@@ -23,31 +23,17 @@ http {
 		error_log  /var/log/nginx/error.log;
 		access_log /var/log/nginx/access.log;
 		
-		root /srv;
-		
-		#location ~ \.php$ {
-		#    try_files $uri =404;
-		#    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		#    fastcgi_pass unix:/run/php/php7.2-fpm.sock;
-		#    fastcgi_index index.php;
-		#    include fastcgi_params;
-		#    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		#    fastcgi_param PATH_INFO $fastcgi_path_info;
-		#}
+		root /srv/lnmp/;
 		
 		location ~ \.php {
-		    #fastcgi_index  index.php;
-		    #fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-		    #include        fastcgi_params;
-		
-		    #fastcgi_pass   php:9000;
-		    # fastcgi_pass 如果是 sock形式，可能是下面的配置
-		    # fastcgi_pass unix:/tmp/php-cgi.sock
-		    #fastcgi_pass unix:/run/php/php7.2-fpm.sock;
-
-	            proxy_pass http://127.0.0.1:9000;
-		    proxy_set_header Host $host;
-	            proxy_set_header X-Real-IP $remote_addr;
+			#fastcgi_index  index.php;
+			#try_files $uri =404;
+			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+			fastcgi_pass 127.0.0.1:9000;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+			fastcgi_index index.php;
+			include fastcgi_params;
 		}
 	}
 
