--- a/asp/Dockerfile
+++ b/asp/Dockerfile
@@ -1,5 +1,6 @@
 # syntax=docker/dockerfile:1
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build-env
+docker pull mcr.microsoft.com/dotnet/aspnet
 WORKDIR /app
 
 # Copy csproj and restore as distinct layers
@@ -11,7 +12,7 @@ COPY ../engine/examples ./
 RUN dotnet publish -c Release -o out
 
 # Build runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:3.1
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "aspnetapp.dll"]
