--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,4 +1,4 @@
-FROM airdb/alpine:latest as builder
+FROM airdb/alpine:3.19 as builder
 
 LABEL maintainer="airdb team <info@airdb.com>"
 LABEL description="https://github.com/airdb"
