--- a/builder/alpine-go/Dockerfile
+++ b/builder/alpine-go/Dockerfile
@@ -6,7 +6,8 @@ LABEL description="https://github.com/airdb"
 LABEL tags="latest v0.2.0"
 LABEL buildtime ="2023-0928_0000"
 
-RUN apk add --no-cache --virtual .build-deps \
+#RUN apk add --no-cache --virtual .build-deps \
+RUN apk add --no-cache --virtual \
       bash \
       git \
       vim \
