--- a/python-uwsgi/Dockerfile
+++ b/python-uwsgi/Dockerfile
@@ -15,7 +15,7 @@ RUN apt update && apt install --no-install-recommends -y \
 
 COPY . /app/python/
 
-RUN pip3 install -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 #CMD ["/bin/bash", "--login"]
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
