--- a/nodejs/docker-compose.yaml
+++ b/nodejs/docker-compose.yaml
@@ -2,11 +2,12 @@ version: '3'
 
 services:
   nodejs:
+    container_name: nodejs
+    image: 'airdb/nodejs:latest'
     platform: linux/amd64
     build:
-      context: ../
-      dockerfile: ./dockerfile/Dockerfile.ubuntu.nodejs
-    image: 'airdb/nodejs:latest'
+      context: .
+      dockerfile: Dockerfile
     command: sleep 3600
     volumes:
       - ./:/srv/toolbox
@@ -14,4 +15,3 @@ services:
       - "8080:9090"
     environment:
       - env=test
-    container_name: nodejs
